After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651050 - [mpegtsmux] error "Stream on pad xxx is not associated with any program" debug output incorrect pointer instead of padname
[mpegtsmux] error "Stream on pad xxx is not associated with any program" debu...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.10.22
Other Linux
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-05-25 10:47 UTC by Andreas Frisch
Modified: 2011-05-25 13:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GST_DEBUG_NO_COLOR=1 GST_DEBUG=*:5 bdremux ... (231.56 KB, application/x-bzip)
2011-05-25 10:51 UTC, Andreas Frisch
  Details
use actual pad pointer instead of MpegTsPadData in debug output (922 bytes, patch)
2011-05-25 13:14 UTC, Andreas Frisch
committed Details | Review

Description Andreas Frisch 2011-05-25 10:47:44 UTC
in my little mpeg TS-to-M2TS remuxing app, i've stumbled upon streams which cause this error.
Comment 1 Andreas Frisch 2011-05-25 10:51:18 UTC
Created attachment 188577 [details]
GST_DEBUG_NO_COLOR=1 GST_DEBUG=*:5 bdremux ...
Comment 2 Andreas Frisch 2011-05-25 11:19:14 UTC
when actually outputting the object name rather than the pointer address of best with gst_object_get_name(best) it turns out

(bdremux:3746): GStreamer-CRITICAL **: gst_object_get_name: assertion `GST_IS_OBJECT (object)' failed
0:00:04.031822000  3746   0x562850 WARN               mpegtsmux mpegtsmux.c:754:mpegtsmux_collected:<m2tsmux> error: Stream on pad (null) is not associated with any program

that best is null
Comment 3 Andreas Frisch 2011-05-25 13:12:28 UTC
okay thanks to thaytan, i think i've found a solution to this problem and will change my code so that it won't try requesting new muxer pads once buffers have started going downstream.

instead, this bug is going to be the place where i'll post a tiny little fix to the debug output line so that the error message is correct.
Comment 4 Andreas Frisch 2011-05-25 13:14:02 UTC
Created attachment 188587 [details] [review]
use actual pad pointer instead of MpegTsPadData in debug output
Comment 5 Tim-Philipp Müller 2011-05-25 13:26:30 UTC
commit 4a7057048fbf531af9f2623cd012dada85b231d3
Author: Andreas Frisch <fraxinas@opendreambox.org>
Date:   Wed May 25 15:10:19 2011 +0200

    mpegtsmux: fix pointer output in stream-not-associated debug output
    
    https://bugzilla.gnome.org/show_bug.cgi?id=651050